[1065] Update tests
Bug: https://github.com/eclipse-sirius/sirius-components/issues/1065
Signed-off-by: Guillaume Coutable <guillaume.coutable@obeo.fr>